Fix object type wrapping

--- a/app/assets/stylesheets/components/_pill.scss
+++ b/app/assets/stylesheets/components/_pill.scss
@@ -200,5 +200,6 @@ $_pills: (
 .has-pills {
   align-items: center;
   display: inline-flex;
+  flex-wrap: wrap;
   gap: 5px;
 }
